# pyevmos

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  test.yml
docs/: .gitignore
docs/source/: address_converter.rst  autogen.rst  autogen_proto.rst  conf.py  eip712.rst  examples.rst  index.rst  installation.rst  proto.rst  provider.rst  transactions.rst  utils.rst  wallet.rst
docs/source/_static/proto/: cosmos_auth.html  cosmos_authz.html  cosmos_bank.html  cosmos_base.html  cosmos_capability.html  cosmos_crisis.html  cosmos_crypto.html  cosmos_distribution.html  cosmos_evidence.html  cosmos_feegrant.html  cosmos_genutil.html  cosmos_gov.html  cosmos_mint.html  cosmos_params.html  cosmos_proto.html  cosmos_slashing.html  cosmos_staking.html  cosmos_tx.html  cosmos_upgrade.html  cosmos_vesting.html  ethermint_crypto.html  ethermint_evm.html  ethermint_feemarket.html  ethermint_types.html  evmos_claims.html  evmos_epochs.html  evmos_erc20.html  evmos_feesplit.html  evmos_incentives.html  evmos_inflation.html  evmos_recovery.html  evmos_vesting.html  gogoproto.html  google_api.html  google_protobuf.html  ibc_applications.html  ibc_core.html  ibc_lightclients.html  proto.html  tendermint_abci.html  (+5 more)
docs/source/_templates/: proto.html
docs/source/ext/: __init__.py  monkey_patch_sphinx.py
docs/source/proto_external/: amino.rst  capability_v1.rst  cosmos_app.rst  cosmos_auth.rst  cosmos_authz.rst  cosmos_autocli.rst  cosmos_bank.rst  cosmos_base.rst  cosmos_capability.rst  cosmos_circuit.rst  cosmos_consensus.rst  cosmos_crisis.rst  cosmos_crypto.rst  cosmos_distribution.rst  cosmos_evidence.rst  cosmos_feegrant.rst  cosmos_genutil.rst  cosmos_gov.rst  cosmos_group.rst  cosmos_ics23.rst  cosmos_mint.rst  cosmos_msg.rst  cosmos_nft.rst  cosmos_orm.rst  cosmos_params.rst  cosmos_proto.rst  cosmos_query.rst  cosmos_reflection.rst  cosmos_slashing.rst  cosmos_staking.rst  cosmos_store.rst  cosmos_tx.rst  cosmos_upgrade.rst  cosmos_vesting.rst  ethermint_crypto.rst  ethermint_evm.rst  ethermint_feemarket.rst  ethermint_types.rst  evmos_claims.rst  evmos_epochs.rst  (+20 more)
docs/source/proto_external/_proto_auto/: amino.html  capability_v1.html  cosmos_app.html  cosmos_auth.html  cosmos_authz.html  cosmos_autocli.html  cosmos_bank.html  cosmos_base.html  cosmos_capability.html  cosmos_circuit.html  cosmos_consensus.html  cosmos_crisis.html  cosmos_crypto.html  cosmos_distribution.html  cosmos_evidence.html  cosmos_feegrant.html  cosmos_genutil.html  cosmos_gov.html  cosmos_group.html  cosmos_ics23.html  cosmos_mint.html  cosmos_msg.html  cosmos_nft.html  cosmos_orm.html  cosmos_params.html  cosmos_proto.html  cosmos_query.html  cosmos_reflection.html  cosmos_slashing.html  cosmos_staking.html  cosmos_store.html  cosmos_tx.html  cosmos_upgrade.html  cosmos_vesting.html  ethermint_crypto.html  ethermint_evm.html  ethermint_feemarket.html  ethermint_types.html  evmos_claims.html  evmos_epochs.html  (+20 more)
evmos/: __init__.py  address_converter.py  constants.py  provider.py  wallet.py
evmos/eip712/: __init__.py  base.py  erc20.py  feesplit.py  revenue.py  stacking.py  staking.py  validator.py
evmos/eip712/encoding/: __init__.py  decode_amino.py  decode_protobuf.py  encoding.py  registry.py  utils.py
evmos/proto/: __init__.py  authz.py  erc20.py  feesplit.py  revenue.py  staking.py  transactions.py  utils.py  validator.py
evmos/proto/autogen/: links.patch
evmos/proto/autogen/proto/cosmos/tx/v1beta1/: service.proto
evmos/proto/autogen/proto/cosmos/vesting/v1beta1/: tx.proto
evmos/proto/autogen/proto/ethermint/evm/v1/: evm.proto
evmos/proto/autogen/proto/ethermint/feemarket/v1/: genesis.proto
evmos/proto/autogen/proto/ethermint/types/v1/: indexer.proto
evmos/proto/autogen/proto/evmos/epochs/v1/: query.proto
evmos/proto/autogen/proto/evmos/erc20/v1/: genesis.proto
evmos/proto/autogen/proto/evmos/incentives/v1/: genesis.proto  incentives.proto
evmos/proto/autogen/proto/evmos/vesting/v1/: query.proto
evmos/proto/autogen/py/capability/v1/: __init__.py
evmos/proto/autogen/py/cosmos/app/v1alpha1/: __init__.py
evmos/proto/autogen/py/cosmos/auth/v1beta1/: __init__.py
evmos/proto/autogen/py/cosmos/authz/v1beta1/: __init__.py
evmos/proto/autogen/py/cosmos/autocli/v1/: __init__.py
evmos/proto/autogen/py/cosmos/bank/v1beta1/: __init__.py
evmos/proto/autogen/py/cosmos/base/v1beta1/: __init__.py
evmos/proto/autogen/py/cosmos/capability/v1beta1/: __init__.py
evmos/proto/autogen/py/cosmos/circuit/v1/: __init__.py
evmos/proto/autogen/py/cosmos/consensus/v1/: __init__.py
evmos/proto/autogen/py/cosmos/crisis/v1beta1/: __init__.py
evmos/proto/autogen/py/cosmos/crypto/ed25519/: __init__.py
evmos/proto/autogen/py/cosmos/crypto/multisig/: __init__.py
evmos/proto/autogen/py/cosmos/crypto/secp256k1/: __init__.py
evmos/proto/autogen/py/cosmos_proto/: __init__.py
evmos/proto/autogen/py/google/api/: __init__.py
evmos/proto/autogen/py/ics23/: __init__.py
evmos/proto/autogen/py/tendermint/abci/: __init__.py
evmos/proto/autogen/py/tendermint/crypto/: __init__.py
evmos/proto/autogen/py/tendermint/p2p/: __init__.py
evmos/proto/autogen/py/tendermint/types/: __init__.py
evmos/proto/autogen/py/tendermint/version/: __init__.py
evmos/proto/scripts/: create_proto_files.sh  get_proto_files.sh
evmos/transactions/: __init__.py  authz.py  common.py  erc20.py  feesplit.py  revenue.py  staking.py  validator.py
evmos/utils/: doc.py  eip_712_hash.py  polyfill.py
scripts/: betterproto_wrapped.py  create_proto_files.sh  get_proto_files.sh  make_proto_docs.sh
tests/: conftest.py  test_address_converter.py  test_real_chain.py  test_transactions.py
tests/tests_eip712/: test_base.py  test_main.py
tests/tests_eip712/test_encoding/: test_decode_amino.py  test_decode_protobuf.py  test_encoding.py  test_registry.py  test_utils.py
tests/tests_proto/: conftest.py  test_msg_ethereum_tx.py  test_msg_send.py  test_transaction.py  test_tx_raw.py  test_web3_extension.py
(+79 files in other folders)
